<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

        <ImageView
        android:id="@+id/friend_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="110dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="test" />

        <TextView
            android:id="@+id/friend_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="35dp"
            android:text="test"
            android:textColor="@color/black"
            android:textSize="18sp" />
</RelativeLayout>