...
  <EditText
      android:id="@+id/search_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:drawableLeft="@drawable/ic_search_dblue"
      app:layout_constraintBottom_toTopOf="@+id/list_pot_friends"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ListView
      android:id="@+id/list_pot_friends"
...
      app:layout_constraintBottom_toTopOf="@+id/search_bar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/back_ffriends"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="350dp"
      android:background="@drawable/ic_back_arrow2"
      app:layout_constraintBottom_toTopOf="@+id/search_bar"
      app:layout_constraintEnd_toEndOf="parent"
...
