...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ffriends_list_button"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginLeft="325dp"
        android:background="@drawable/ic_baseline_person_search"
        app:layout_constraintBottom_toTopOf="@+id/list_friends"
        app:layout_constraintEnd_toEndOf="parent"
...
